Small fixes and Responsive WIP

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 # hakkie
 ENVIRONMENT=development
+BASE_URL=http://localhost/hakkie/
 
 DB_ENGINE=mysql
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=3306
 DB_NAME=hakkie_db
 DB_USER=root
 DB_PASSWORD=
