--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,6 @@ PHPMAILER_PASSWORD=
 PHPMAILER_PORT=465
 
 GOOGLE_LOGIN_URI=https://accounts.google.com/o/oauth2/v2/auth
-GOOGLE_CLIENTID=X.apps.googleusercontent.com
-GOOGLE_CLIENTSECRET=
-GOOGLE_REDIRECT=http://localhost/hakkie/public/views/home.php
+GOOGLE_CLIENT_ID=X.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=http://localhost/hakkie/public/views/home.php
