Improved Router with method selection and controller as a class

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "autoload": {
         "psr-4": {
             "Core\\": "Core/",
-            "Http\\": "Http/"
+            "Http\\": "Http/",
+            "Http\\Controllers\\": "Http/Controllers/"
         }
     }
 }
