--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ PHPMAILER_HOST=smtp.gmail.com
 PHPMAILER_USER=
 PHPMAILER_PASSWORD=
 PHPMAILER_PORT=465
+PHPMAILER_FROM_ADDRESS=
+PHPMAILER_FROM_NAME=Hakkie
 
 GOOGLE_LOGIN_URI=https://accounts.google.com/o/oauth2/v2/auth
 GOOGLE_CLIENT_ID=X.apps.googleusercontent.com
